# vicinae

./: .clang-format-ignore  .clang-tidy  .clangd  .gitattributes  .gitignore  .nvimrc  .qmlformat.ini  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MIGRATION.md  Makefile  README.md  config.json  config.json.bak  config.jsonc  default.nix  flake.nix  gen.cpp  gen.ts  keybinds.jsonc  manager.proto  manifest.yaml  module.nix  new-client.ts  nfpm.yaml  nix-support.json  package.nix  patch.diff  proto.service  service.proto  tempnotes.md  vicinae.nix
browser-extension/: CMakeLists.txt  README.md
browser-extension/extension/: CMakeLists.txt  Makefile  background.js  manifest.json  popup.html  popup.js
browser-extension/src/: main.cpp
lib/browser-extension/: CMakeLists.txt  README.md
lib/browser-extension/chrome/: background.js  manifest.json  popup.html  popup.js
lib/browser-extension/extension/: README.md
lib/browser-extension/native-host/: com.vicinae.vicinae.chromium.json.in  com.vicinae.vicinae.json.in
lib/browser-extension/src/: browser.cpp
lib/script-command/: CMakeLists.txt  Makefile  script-command.hpp
lib/script-command/src/: script-command.cpp
lib/script-command/tests/: argument-validation.cpp  edge-cases.cpp  fields.cpp  shebang-parsing.cpp  time-parsing.cpp
lib/xdgpp/: CMakeLists.txt  Makefile  README.md
lib/xdgpp/fixtures/: firefox-bin.desktop
lib/xdgpp/tests/: file.cpp  main.cpp
lib/xdgpp/xdgpp/: xdgpp.hpp
src/browser-extension/: CMakeLists.txt  Makefile  README.md  manifest.firefox.json
src/browser-extension/chrome/: background.js  manifest.json  popup.html  popup.js
src/browser-extension/native-host/: com.vicinae.vicinae.firefox.json.in
src/browser-extension/src/: browser.cpp
src/cli/: CMakeLists.txt
src/cli/src/: cli.cpp  cli.hpp  config.hpp  default-config.hpp  fs.cpp  fs.hpp  ipc-client.hpp  local-socket.cpp  local-socket.hpp  main.cpp  script-command-generator.hpp  script.hpp  server.cpp  server.hpp  state.hpp  theme.cpp  theme.hpp  url-handler-main.cpp
src/data-control-server/: CMakeLists.txt
src/data-control-server/src/: clipboard-writer.cpp  clipboard-writer.hpp  main.cpp  selection.cpp  selection.hpp  stdin-reader.cpp  stdin-reader.hpp
src/file-indexer/: CMakeLists.txt
src/file-indexer/src/: background-thread-linux.cpp  db-writer.cpp  entry-filter.cpp  file-indexer-db.cpp  file-indexer-query-engine.cpp  file-indexer-query-policy.cpp  file-indexer.cpp  file-system-watcher.cpp  filesystem-walker.cpp  home-directory-watcher.cpp  important-dir-watcher-linux.cpp  incremental-scanner.cpp  indexer-scanner.cpp  indexer-service.cpp  io-pacer.cpp  main.cpp  query-pool.cpp  relevancy-scorer.cpp  scan-dispatcher.cpp  watcher-scanner.cpp  writer-worker.cpp
src/file-indexer/tests/: main.cpp  query-quality.cpp
src/lib/ansi/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/crypto/: CMakeLists.txt
src/lib/emoji/: CMakeLists.txt  README.md
src/lib/figura/: CMakeLists.txt
src/lib/fuzzy/: CMakeLists.txt
src/lib/glyph/: CMakeLists.txt  Makefile  README.md
src/lib/linux-utils/: CMakeLists.txt  Makefile
src/lib/script-command/: CMakeLists.txt  Makefile  script-command.hpp
src/lib/snippet/: CMakeLists.txt
src/lib/soulver/: CMakeLists.txt
src/lib/vicinae-ipc/: CMakeLists.txt
src/lib/xdgpp/: CMakeLists.txt  Makefile
src/server/: .gitignore  CMakeLists.txt  resources-core.qrc.in  resources-extensions.qrc.in  resources.qrc.in
src/server/assets/: extension-runtime.js
src/server/include/: clipboard-actions.hpp  command-database.hpp  common-actions.hpp  font-service.hpp  omni-database.hpp  preference.hpp  switch-windows-view.hpp  watcher.hpp
src/server/src/: builtin-url-command.hpp  builtin_icon.cpp  builtin_icon.hpp  clipboard-actions.hpp  color-formatter.cpp  command-actions.cpp  command-actions.hpp  command-database.cpp  command-database.hpp  command.hpp  common.hpp  create-quicklink-command.hpp  extension-interval-scheduler.cpp  extension-interval-scheduler.hpp  font-service.cpp  font-service.hpp  image-fetcher.hpp  interval-scheduler.cpp  ipc-command-handler.cpp  ipc-command-server.cpp  ipc-command-server.hpp  main.cpp  manage-quicklinks-command.hpp  navigation-controller.cpp  navigation-controller.hpp  omni-database.hpp  pch.h  placeholder.cpp  placeholder.hpp  server.cpp  service-registry.cpp  service-registry.hpp  (+4 more)
src/snippet/: CMakeLists.txt  Makefile
src/typescript/: CMakeLists.txt  README.md  biome.json
tests/: CMakeLists.txt  README.md
vicinae/: CMakeLists.txt  browse-fonts-view.hpp  contribs.qrc  resources.qrc.in
vicinae/assets/: config.jsonc
vicinae/icons/: icons.qrc
vicinae/include/: builtin_icon.hpp  clipboard-actions.hpp  clipboard-history-view.hpp  command-actions.hpp  command-database.hpp  create-quicklink-command.hpp  emoji-command.hpp  font-service.hpp  icon-browser-command.hpp  manage-fallback-commands.hpp  manage-themes-command.hpp  omni-command-db.hpp  omni-database.hpp  preference.hpp  search-files-view.hpp  switch-windows-view.hpp  theme.hpp  watcher.hpp
vicinae/protocols/: virtual-keyboard-unstable-v1.xml
vicinae/src/: builtin-url-command.hpp  builtin_icon.cpp  builtin_icon.hpp  calculator-history-command.hpp  color-formatter.cpp  color-formatter.hpp  command-actions.cpp  command-controller.cpp  command-controller.hpp  command-database.cpp  command.hpp  common.hpp  extension-error-view.hpp  font-service.cpp  image-fetcher.hpp  ipc-command-handler.cpp  ipc-command-handler.hpp  ipc-command-server.cpp  ipc-command-server.hpp  main.cpp  manage-quicklinks-command.hpp  navigation-controller.cpp  navigation-controller.hpp  pch.h  placeholder.cpp  raycast-store-view.hpp  root-command.hpp  root-extension-manager.hpp  root-search.cpp  script-command-generator.hpp  service-registry.cpp  service-registry.hpp  single-view-command-context.hpp  theme.cpp  trie.hpp  vicinae.cpp  vicinae.hpp
wlr-clip/: CMakeLists.txt
wlr-clip/src/: app.cpp  app.hpp  data-control-client.cpp  data-device.cpp  data-device.hpp  data-offer.cpp  data-offer.hpp  main.cpp
(+3195 files in other folders)
